# fastapi-handler

./: pyproject.toml
app/: handler.py  main.py
